{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 205,
  "lineage": "6a5bec6a-8473-fa96-274d-ab98be5bc3ad",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "pnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/example-nic",
            "internal_domain_name_suffix": "r5fdbg50bj5uviffae5yqwlv5h.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/tester-pip",
                "subnet_id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-22-48-01-C2-EF",
            "name": "example-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "example-resources",
            "virtual_machine_id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Compute/virtualMachines/example-machine"
          },
          "dependencies": [
            "azurerm_public_ip.ppip",
            "azurerm_resource_group.prg",
            "azurerm_subnet.psnet",
            "azurerm_virtual_network.pvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "pnic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/example-nic2",
            "internal_domain_name_suffix": "r5fdbg50bj5uviffae5yqwlv5h.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/tester-pip2",
                "subnet_id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal2"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-22-48-01-AD-E3",
            "name": "example-nic2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "example-resources",
            "virtual_machine_id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Compute/virtualMachines/example-machine2"
          },
          "dependencies": [
            "azurerm_public_ip.ppip2",
            "azurerm_resource_group.prg",
            "azurerm_subnet.psnet2",
            "azurerm_virtual_network.pvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "location": "uksouth",
            "name": "example-nsg",
            "resource_group_name": "example-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "p22",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "p80",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "p8000",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.prg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pnsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg2",
            "location": "uksouth",
            "name": "example-nsg2",
            "resource_group_name": "example-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "p22",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "p5432",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.prg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg2/securityRules/p22",
            "name": "p22",
            "network_security_group_name": "example-nsg2",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.pnsg2",
            "azurerm_resource_group.prg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "5432",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg2/securityRules/p5432",
            "name": "p5432",
            "network_security_group_name": "example-nsg2",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.pnsg2",
            "azurerm_resource_group.prg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ppip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/tester-pip",
            "idle_timeout_in_minutes": 30,
            "ip_address": "51.132.187.75",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "tester-pip",
            "resource_group_name": "example-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.prg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ppip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/tester-pip2",
            "idle_timeout_in_minutes": 30,
            "ip_address": "20.68.57.127",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "tester-pip2",
            "resource_group_name": "example-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.prg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "psnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "example-resources",
            "virtual_network_name": "example-network"
          },
          "dependencies": [
            "azurerm_resource_group.prg",
            "azurerm_virtual_network.pvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "psnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal2",
            "name": "internal2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "example-resources",
            "virtual_network_name": "example-network"
          },
          "dependencies": [
            "azurerm_resource_group.prg",
            "azurerm_virtual_network.pvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "pnsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
            "network_security_group_id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "subnet_id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.pnsg",
            "azurerm_resource_group.prg",
            "azurerm_subnet.psnet",
            "azurerm_virtual_network.pvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "pnsga2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal2",
            "network_security_group_id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg2",
            "subnet_id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal2"
          },
          "dependencies": [
            "azurerm_network_security_group.pnsg2",
            "azurerm_resource_group.prg",
            "azurerm_subnet.psnet2",
            "azurerm_virtual_network.pvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "pvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9b30ca8f-0afa-4a7f-a0a5-013f885975ff",
            "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network",
            "location": "uksouth",
            "name": "example-network",
            "resource_group_name": "example-resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal2",
                "name": "internal2",
                "security_group": "/subscriptions/6929de52-509b-4e60-91e8-816aeba49923/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg2"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.prg"
          ]
        }
      ]
    }
  ]
}